src/main/gen/wgslplugin/language/parser/WgslParser.java
// This is a generated file. Not intended for manual editing.
package wgslplugin.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static wgslplugin.language.psi.WGSLTypes.*;
import static wgslplugin.language.parser.WgslParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class WgslParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return translation_unit(b, l + 1);
  }

  /* ********************************************************** */
  // READ
  //     | WRITE
  //     | READ_WRITE
  public static boolean access_mode(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "access_mode")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACCESS_MODE, "<access mode>");
    r = consumeToken(b, READ);
    if (!r) r = consumeToken(b, WRITE);
    if (!r) r = consumeToken(b, READ_WRITE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // PAREN_LEFT ( expression (COMMA expression)* COMMA? )? PAREN_RIGHT
  public static boolean argument_expression_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_expression_list")) return false;
    if (!nextTokenIs(b, PAREN_LEFT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PAREN_LEFT);
    r = r && argument_expression_list_1(b, l + 1);
    r = r && consumeToken(b, PAREN_RIGHT);
    exit_section_(b, m, ARGUMENT_EXPRESSION_LIST, r);
    return r;
  }

  // ( expression (COMMA expression)* COMMA? )?
  private static boolean argument_expression_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_expression_list_1")) return false;
    argument_expression_list_1_0(b, l + 1);
    return true;
  }

  // expression (COMMA expression)* COMMA?
  private static boolean argument_expression_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_expression_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression(b, l + 1);
    r = r && argument_expression_list_1_0_1(b, l + 1);
    r = r && argument_expression_list_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA expression)*
  private static boolean argument_expression_list_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_expression_list_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!argument_expression_list_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "argument_expression_list_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA expression
  private static boolean argument_expression_list_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_expression_list_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean argument_expression_list_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_expression_list_1_0_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // attribute_list* ARRAY TYPE_LESS_THAN type_decl ( COMMA element_count_expression )? TYPE_GREATER_THAN
  public static boolean array_type_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_TYPE_DECL, "<array type decl>");
    r = array_type_decl_0(b, l + 1);
    r = r && consumeTokens(b, 0, ARRAY, TYPE_LESS_THAN);
    r = r && type_decl(b, l + 1);
    r = r && array_type_decl_4(b, l + 1);
    r = r && consumeToken(b, TYPE_GREATER_THAN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // attribute_list*
  private static boolean array_type_decl_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_decl_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!attribute_list(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "array_type_decl_0", c)) break;
    }
    return true;
  }

  // ( COMMA element_count_expression )?
  private static boolean array_type_decl_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_decl_4")) return false;
    array_type_decl_4_0(b, l + 1);
    return true;
  }

  // COMMA element_count_expression
  private static boolean array_type_decl_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_decl_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && element_count_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // lhs_expression ( EQUAL | compound_assignment_operator) expression
  //       | UNDERSCORE EQUAL expression
  public static boolean assignment_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_statement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_STATEMENT, "<assignment statement>");
    r = assignment_statement_0(b, l + 1);
    if (!r) r = assignment_statement_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // lhs_expression ( EQUAL | compound_assignment_operator) expression
  private static boolean assignment_statement_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_statement_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = lhs_expression(b, l + 1);
    r = r && assignment_statement_0_1(b, l + 1);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // EQUAL | compound_assignment_operator
  private static boolean assignment_statement_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_statement_0_1")) return false;
    boolean r;
    r = consumeToken(b, EQUAL);
    if (!r) r = compound_assignment_operator(b, l + 1);
    return r;
  }

  // UNDERSCORE EQUAL expression
  private static boolean assignment_statement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_statement_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, UNDERSCORE, EQUAL);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // attribute_name PAREN_LEFT ( literal_or_ident COMMA )* literal_or_ident PAREN_RIGHT
  //     | attribute_name
  public static boolean attribute(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute")) return false;
    if (!nextTokenIs(b, IDENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = attribute_0(b, l + 1);
    if (!r) r = attribute_name(b, l + 1);
    exit_section_(b, m, ATTRIBUTE, r);
    return r;
  }

  // attribute_name PAREN_LEFT ( literal_or_ident COMMA )* literal_or_ident PAREN_RIGHT
  private static boolean attribute_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = attribute_name(b, l + 1);
    r = r && consumeToken(b, PAREN_LEFT);
    r = r && attribute_0_2(b, l + 1);
    r = r && literal_or_ident(b, l + 1);
    r = r && consumeToken(b, PAREN_RIGHT);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( literal_or_ident COMMA )*
  private static boolean attribute_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!attribute_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "attribute_0_2", c)) break;
    }
    return true;
  }

  // literal_or_ident COMMA
  private static boolean attribute_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = literal_or_ident(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ATTR_LEFT ( attribute COMMA )* attribute ATTR_RIGHT
  //     | ( AT attribute )+
  public static boolean attribute_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_list")) return false;
    if (!nextTokenIs(b, "<attribute list>", AT, ATTR_LEFT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATTRIBUTE_LIST, "<attribute list>");
    r = attribute_list_0(b, l + 1);
    if (!r) r = attribute_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ATTR_LEFT ( attribute COMMA )* attribute ATTR_RIGHT
  private static boolean attribute_list_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_list_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ATTR_LEFT);
    r = r && attribute_list_0_1(b, l + 1);
    r = r && attribute(b, l + 1);
    r = r && consumeToken(b, ATTR_RIGHT);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( attribute COMMA )*
  private static boolean attribute_list_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_list_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!attribute_list_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "attribute_list_0_1", c)) break;
    }
    return true;
  }

  // attribute COMMA
  private static boolean attribute_list_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_list_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = attribute(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( AT attribute )+
  private static boolean attribute_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_list_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = attribute_list_1_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!attribute_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "attribute_list_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // AT attribute
  private static boolean attribute_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && attribute(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IDENT
  public static boolean attribute_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_name")) return false;
    if (!nextTokenIs(b, IDENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENT);
    exit_section_(b, m, ATTRIBUTE_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // BREAK
  public static boolean break_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "break_statement")) return false;
    if (!nextTokenIs(b, BREAK)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BREAK);
    exit_section_(b, m, BREAK_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // VEC2I
  //     | VEC3I
  //     | VEC4I
  //     | VEC2U
  //     | VEC3U
  //     | VEC4U
  //     | VEC2F
  //     | VEC3F
  //     | VEC4F
  //     | VEC2H
  //     | VEC3H
  //     | VEC4H
  //     | MAT2X2F
  //     | MAT2X3F
  //     | MAT2X4F
  //     | MAT3X2F
  //     | MAT3X3F
  //     | MAT3X4F
  //     | MAT4X2F
  //     | MAT4X3F
  //     | MAT4X4F
  //     | MAT2X2H
  //     | MAT2X3H
  //     | MAT2X4H
  //     | MAT3X2H
  //     | MAT3X3H
  //     | MAT3X4H
  //     | MAT4X2H
  //     | MAT4X3H
  //     | MAT4X4H
  public static boolean builtin_type_alias(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "builtin_type_alias")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUILTIN_TYPE_ALIAS, "<builtin type alias>");
    r = consumeToken(b, VEC2I);
    if (!r) r = consumeToken(b, VEC3I);
    if (!r) r = consumeToken(b, VEC4I);
    if (!r) r = consumeToken(b, VEC2U);
    if (!r) r = consumeToken(b, VEC3U);
    if (!r) r = consumeToken(b, VEC4U);
    if (!r) r = consumeToken(b, VEC2F);
    if (!r) r = consumeToken(b, VEC3F);
    if (!r) r = consumeToken(b, VEC4F);
    if (!r) r = consumeToken(b, VEC2H);
    if (!r) r = consumeToken(b, VEC3H);
    if (!r) r = consumeToken(b, VEC4H);
    if (!r) r = consumeToken(b, MAT2X2F);
    if (!r) r = consumeToken(b, MAT2X3F);
    if (!r) r = consumeToken(b, MAT2X4F);
    if (!r) r = consumeToken(b, MAT3X2F);
    if (!r) r = consumeToken(b, MAT3X3F);
    if (!r) r = consumeToken(b, MAT3X4F);
    if (!r) r = consumeToken(b, MAT4X2F);
    if (!r) r = consumeToken(b, MAT4X3F);
    if (!r) r = consumeToken(b, MAT4X4F);
    if (!r) r = consumeToken(b, MAT2X2H);
    if (!r) r = consumeToken(b, MAT2X3H);
    if (!r) r = consumeToken(b, MAT2X4H);
    if (!r) r = consumeToken(b, MAT3X2H);
    if (!r) r = consumeToken(b, MAT3X3H);
    if (!r) r = consumeToken(b, MAT3X4H);
    if (!r) r = consumeToken(b, MAT4X2H);
    if (!r) r = consumeToken(b, MAT4X3H);
    if (!r) r = consumeToken(b, MAT4X4H);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // statement case_body?
  //     | FALLTHROUGH SEMICOLON
  public static boolean case_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_body")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CASE_BODY, "<case body>");
    r = case_body_0(b, l + 1);
    if (!r) r = parseTokens(b, 0, FALLTHROUGH, SEMICOLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // statement case_body?
  private static boolean case_body_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_body_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = statement(b, l + 1);
    r = r && case_body_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // case_body?
  private static boolean case_body_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_body_0_1")) return false;
    case_body(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // const_literal ( COMMA const_literal )* COMMA?
  public static boolean case_selectors(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_selectors")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CASE_SELECTORS, "<case selectors>");
    r = const_literal(b, l + 1);
    r = r && case_selectors_1(b, l + 1);
    r = r && case_selectors_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( COMMA const_literal )*
  private static boolean case_selectors_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_selectors_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!case_selectors_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "case_selectors_1", c)) break;
    }
    return true;
  }

  // COMMA const_literal
  private static boolean case_selectors_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_selectors_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && const_literal(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean case_selectors_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_selectors_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // PLUS_EQUAL
  //     | MINUS_EQUAL
  //     | TIMES_EQUAL
  //     | DIVISION_EQUAL
  //     | MODULO_EQUAL
  //     | AND_EQUAL
  //     | OR_EQUAL
  //     | XOR_EQUAL
  //     | SHIFT_RIGHT_EQUAL
  //     | SHIFT_LEFT_EQUAL
  public static boolean compound_assignment_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_assignment_operator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPOUND_ASSIGNMENT_OPERATOR, "<compound assignment operator>");
    r = consumeToken(b, PLUS_EQUAL);
    if (!r) r = consumeToken(b, MINUS_EQUAL);
    if (!r) r = consumeToken(b, TIMES_EQUAL);
    if (!r) r = consumeToken(b, DIVISION_EQUAL);
    if (!r) r = consumeToken(b, MODULO_EQUAL);
    if (!r) r = consumeToken(b, AND_EQUAL);
    if (!r) r = consumeToken(b, OR_EQUAL);
    if (!r) r = consumeToken(b, XOR_EQUAL);
    if (!r) r = consumeToken(b, SHIFT_RIGHT_EQUAL);
    if (!r) r = consumeToken(b, SHIFT_LEFT_EQUAL);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BRACE_LEFT statement* BRACE_RIGHT
  public static boolean compound_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_statement")) return false;
    if (!nextTokenIs(b, BRACE_LEFT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACE_LEFT);
    r = r && compound_statement_1(b, l + 1);
    r = r && consumeToken(b, BRACE_RIGHT);
    exit_section_(b, m, COMPOUND_STATEMENT, r);
    return r;
  }

  // statement*
  private static boolean compound_statement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_statement_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "compound_statement_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // type_decl PAREN_LEFT ( const_expression (COMMA const_expression)* COMMA? )? PAREN_RIGHT
  //     | const_literal
  public static boolean const_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONST_EXPRESSION, "<const expression>");
    r = const_expression_0(b, l + 1);
    if (!r) r = const_literal(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // type_decl PAREN_LEFT ( const_expression (COMMA const_expression)* COMMA? )? PAREN_RIGHT
  private static boolean const_expression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_expression_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = type_decl(b, l + 1);
    r = r && consumeToken(b, PAREN_LEFT);
    r = r && const_expression_0_2(b, l + 1);
    r = r && consumeToken(b, PAREN_RIGHT);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( const_expression (COMMA const_expression)* COMMA? )?
  private static boolean const_expression_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_expression_0_2")) return false;
    const_expression_0_2_0(b, l + 1);
    return true;
  }

  // const_expression (COMMA const_expression)* COMMA?
  private static boolean const_expression_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_expression_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = const_expression(b, l + 1);
    r = r && const_expression_0_2_0_1(b, l + 1);
    r = r && const_expression_0_2_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA const_expression)*
  private static boolean const_expression_0_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_expression_0_2_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!const_expression_0_2_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "const_expression_0_2_0_1", c)) break;
    }
    return true;
  }

  // COMMA const_expression
  private static boolean const_expression_0_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_expression_0_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && const_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean const_expression_0_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_expression_0_2_0_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // INT_LITERAL
  //     | UINT_LITERAL
  //     | float_literal
  //     | TRUE
  //     | FALSE
  public static boolean const_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_literal")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONST_LITERAL, "<const literal>");
    r = consumeToken(b, INT_LITERAL);
    if (!r) r = consumeToken(b, UINT_LITERAL);
    if (!r) r = float_literal(b, l + 1);
    if (!r) r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
